<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ushaswini.triviaapp.TriviaActivity"
    android:layout_marginBottom="10dp">

    <TextView
        android:text="@string/tv_questionNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tv_questionNumber"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:text="@string/tv_timeRemaininglabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/tv_timeRemaining"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignParentTop="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_below="@+id/tv_questionNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/imageView_ques"
        android:scaleType="fitXY"
        android:maxHeight="150dp"
        android:adjustViewBounds="true"
        android:layout_height="175dp" />

    <TextView
        android:text="@string/tv_questionTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_questionText"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/btn_previous_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tv_questionNumber"
        android:layout_toEndOf="@+id/tv_questionNumber"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:id="@+id/btn_previous"
        android:background="@android:color/holo_blue_bright"
        android:textColor="@android:color/white"
        android:textAllCaps="false" />

    <Button
        android:text="@string/btn_next_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tv_timeRemaining"
        android:layout_alignEnd="@+id/tv_timeRemaining"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/btn_next"
        android:background="@android:color/holo_blue_bright"
        android:textColor="@android:color/white"
        android:textAllCaps="false" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_questionText"
        android:layout_marginTop="13dp"
        android:layout_alignRight="@+id/tv_timeRemaining"
        android:layout_alignEnd="@+id/tv_timeRemaining"
        android:layout_above="@+id/btn_previous">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linear_options" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioGroup_options" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_questionText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:id="@+id/progressBar_trivia" />

    <TextView
        android:text="Loading Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/tv_loadImage"
        android:layout_above="@+id/tv_questionText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
