<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ushaswini.triviaapp.MainActivity">

    <TextView
        android:text="@string/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="99dp"
        android:id="@+id/imageView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:scaleType="fitXY"
        android:minHeight="200dp"
        android:maxWidth="200dp" />

    <Button
        android:text="@string/btn_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="48dp"
        android:layout_marginEnd="48dp"
        android:id="@+id/btn_start"
        android:textAllCaps="false"
        android:background="@android:color/holo_blue_bright"
        android:textColor="@android:color/white"
        android:layout_alignBaseline="@+id/btn_exit"
        android:layout_alignBottom="@+id/btn_exit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btn_exit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_exit"
        android:textAllCaps="false"
        android:background="@android:color/holo_blue_bright"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_toLeftOf="@+id/btn_start"
        android:layout_toStartOf="@+id/btn_start"
        android:layout_marginTop="27dp"
        android:id="@+id/progressBar_main" />

    <TextView
        android:text="Loading Trivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_loadingTrivia"
        android:layout_above="@+id/progressBar_main"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat" />
</RelativeLayout>
