<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ushaswini.triviaapp.StatActivity"
    android:layout_marginStart="5dp">

    <TextView
        android:text="@string/tv_correctans_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:id="@+id/tv_correctAnswers"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/tv_correctAnswers"
        android:layout_alignLeft="@+id/tv_correctAnswers"
        android:layout_alignStart="@+id/tv_correctAnswers"
        android:layout_marginTop="19dp"
        android:minHeight="300dp"
        android:adjustViewBounds="true"
        android:layout_height="325dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/linear_answers"
            android:minHeight="300dp"
            android:layout_height="200dp" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="23dp" />

    <Button
        android:text="@string/btn_finish_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar4"
        android:layout_toRightOf="@+id/tv_performance"
        android:layout_toEndOf="@+id/tv_performance"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:id="@+id/btn_finish"
        android:background="@android:color/holo_blue_bright"
        android:textColor="@android:color/white"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/tv_performance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_performance"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_above="@+id/progressBar4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar4"
        android:maxWidth="75dp"
        android:minWidth="275dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_percentage"
        android:layout_alignBottom="@+id/progressBar4"
        android:layout_toRightOf="@+id/progressBar4"
        android:layout_marginStart="5dp" />

</RelativeLayout>
